# llmkit

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api-reference.md  getting-started.md  index.md
src/llmkit/: __init__.py  client.py  config.py  exceptions.py  models.py  provider.py  retry.py
src/llmkit/providers/: __init__.py  anthropic.py  ollama.py  openai.py
src/llmwire/: __init__.py  client.py  config.py  exceptions.py  models.py  provider.py
src/llmwire/providers/: __init__.py  anthropic.py  ollama.py  openai.py
tests/: conftest.py  test_client.py  test_config.py  test_models.py  test_retry.py
tests/providers/: test_anthropic.py  test_ollama.py  test_openai.py
