[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmkit"
version = "0.1.0"
description = "Lightweight multi-provider LLM client for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Alessandro Marotta", email = "alessand.marotta@gmail.com" },
]
keywords = ["llm", "openai", "anthropic", "ollama", "ai", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/alexmar07/llmkit"
Documentation = "https://alexmar07.github.io/llmkit"
Repository = "https://github.com/alexmar07/llmkit"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["src/llmkit"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
